test/tests/stages/18_structures/valid/extra_credit/size_and_offset/union_sizes.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[379]:
  struct
  identifier(eight_bytes)
  {
  int
  identifier(i)
  ;
  char
  identifier(c)
  ;
  }
  ;
  struct
  identifier(two_bytes)
  {
  char
  identifier(arr)
  [
  const int(2)
  ]
  ;
  }
  ;
  struct
  identifier(three_bytes)
  {
  char
  identifier(arr)
  [
  const int(3)
  ]
  ;
  }
  ;
  struct
  identifier(sixteen_bytes)
  {
  struct
  identifier(eight_bytes)
  identifier(eight)
  ;
  struct
  identifier(two_bytes)
  identifier(two)
  ;
  struct
  identifier(three_bytes)
  identifier(three)
  ;
  }
  ;
  struct
  identifier(seven_bytes)
  {
  struct
  identifier(two_bytes)
  identifier(two)
  ;
  struct
  identifier(three_bytes)
  identifier(three)
  ;
  struct
  identifier(two_bytes)
  identifier(two2)
  ;
  }
  ;
  struct
  identifier(twentyfour_bytes)
  {
  struct
  identifier(seven_bytes)
  identifier(seven)
  ;
  struct
  identifier(sixteen_bytes)
  identifier(sixteen)
  ;
  }
  ;
  struct
  identifier(twenty_bytes)
  {
  struct
  identifier(sixteen_bytes)
  identifier(sixteen)
  ;
  struct
  identifier(two_bytes)
  identifier(two)
  ;
  }
  ;
  struct
  identifier(wonky)
  {
  char
  identifier(arr)
  [
  const int(19)
  ]
  ;
  }
  ;
  struct
  identifier(internal_padding)
  {
  char
  identifier(c)
  ;
  double
  identifier(d)
  ;
  }
  ;
  struct
  identifier(contains_struct_array)
  {
  char
  identifier(c)
  ;
  struct
  identifier(eight_bytes)
  identifier(struct_array)
  [
  const int(3)
  ]
  ;
  }
  ;
  union
  identifier(no_padding)
  {
  char
  identifier(c)
  ;
  unsigned
  char
  identifier(uc)
  ;
  signed
  char
  identifier(arr)
  [
  const int(11)
  ]
  ;
  }
  ;
  union
  identifier(with_padding)
  {
  signed
  char
  identifier(arr)
  [
  const int(10)
  ]
  ;
  unsigned
  int
  identifier(ui)
  ;
  }
  ;
  union
  identifier(contains_array)
  {
  union
  identifier(with_padding)
  identifier(arr1)
  [
  const int(2)
  ]
  ;
  union
  identifier(no_padding)
  identifier(arr)
  [
  const int(3)
  ]
  ;
  }
  ;
  union
  identifier(double_and_int)
  {
  int
  identifier(i)
  ;
  double
  identifier(d)
  ;
  }
  ;
  union
  identifier(contains_structs)
  {
  struct
  identifier(wonky)
  identifier(x)
  ;
  struct
  identifier(eight_bytes)
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  sizeof
  (
  union
  identifier(no_padding)
  )
  !=
  const int(11)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  sizeof
  (
  union
  identifier(with_padding)
  )
  !=
  const int(12)
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  sizeof
  (
  union
  identifier(contains_array)
  )
  !=
  const int(36)
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  sizeof
  (
  union
  identifier(double_and_int)
  )
  !=
  const int(8)
  )
  {
  return
  const int(4)
  ;
  }
  if
  (
  sizeof
  (
  union
  identifier(contains_structs)
  )
  !=
  const int(20)
  )
  {
  return
  const int(5)
  ;
  }
  union
  identifier(no_padding)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  union
  identifier(contains_array)
  identifier(y)
  =
  {
  {
  {
  {
  -
  const int(1)
  ,
  const int(2)
  }
  }
  }
  }
  ;
  union
  identifier(contains_structs)
  *
  identifier(get_union_ptr)
  (
  void
  )
  ;
  if
  (
  sizeof
  identifier(x)
  !=
  const int(11)
  )
  {
  return
  const int(6)
  ;
  }
  if
  (
  sizeof
  identifier(y)
  .
  identifier(arr1)
  !=
  const int(24)
  )
  {
  return
  const int(7)
  ;
  }
  if
  (
  sizeof
  *
  identifier(get_union_ptr)
  (
  )
  !=
  const int(20)
  )
  {
  return
  const int(8)
  ;
  }
  return
  const int(0)
  ;
  }
  union
  identifier(contains_structs)
  *
  identifier(get_union_ptr)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
