test/tests/stages/18_structures/invalid_types/invalid_member_operators/member_pointer_non_struct_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  struct
  identifier(a)
  {
  int
  identifier(x)
  ;
  int
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(a)
  identifier(my_struct)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  return
  identifier(my_struct)
  ->
  identifier(x)
  ;
  }
